Fix contrast for selected filter pills a different way

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -11,7 +11,7 @@
 [data-theme="blue"] {
   --background-color: aliceblue;
   --background-darker: hsl(208, 100%, 90%);
-  --primary-accent: steelblue;
+  --primary-accent: #427aa9;
   --primary-accent-semiopaque: #{transparentize(steelblue, 0.5)};
 }
 
